tests/testcases/valid/classes/13_this_parameter_shadowing.ciel
// Test 'this' usage with parameter name shadowing

class Rectangle {
    public:
        int width;
        int height;

        void set_dimensions(int w, int h) {
            this->width = w;
            this->height = h;
            return;
        }

        int area() {
            return this->width * this->height;
        }

        int perimeter() {
            return 2 * (this->width + this->height);
        }
};

int main() {
    class Rectangle rect;
    rect.set_dimensions(5, 10);
    int a = rect.area();
    int p = rect.perimeter();
    int result = a + p;
    if (result == 80) {
        return 0;
    }
    return 1;
}
