tests/testcases/invalid/semantic/65_this_dot_operator_instead_of_arrow.ciel
// Error: Using dot operator with 'this' instead of arrow

class Point {
    public:
        int x;
        int y;

        void set_coords(int a, int b) {
            this.x = a;  // Error: should be this->x
            this.y = b;  // Error: should be this->y
            return;
        }

        int get_x() {
            return this.x;  // Error: should be this->x
        }
};

int main() {
    class Point p;
    p.x = 5;
    p.y = 10;
    return p.get_x();
}
